--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
+    "react": "^16.13.1",
     "react-dom": "^17.0.2",
+    "react-google-map": "^3.1.1",
+    "react-helmet": "^6.0.0",
+    "react-helmet-async": "^1.0.9",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -15,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync build/ s3://google-map-react --profile embed_svc"
   },
   "eslintConfig": {
     "extends": [
